--- a/archives/toutiao-search/2023-11-06.md
+++ b/archives/toutiao-search/2023-11-06.md
@@ -1,41 +1,67 @@
 # 2023-11-06
 
-共 351 条
+共 371 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 06 2023 19:00:50 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Nov 06 2023 20:09:26 GMT+0800 (China Standard Time) -->
+1. [医院院长倒卖出生证明每张赚6万](https://so.toutiao.com/search?keyword=医院院长倒卖出生证明每张赚6万)
 1. [记者直击东北暴雪 雪太大没去成](https://so.toutiao.com/search?keyword=记者直击东北暴雪+雪太大没去成)
-1. [父子俩5.2元购入汽油6.7元出售](https://so.toutiao.com/search?keyword=父子俩5.2元购入汽油6.7元出售)
 1. [2023乌镇峰会进入倒计时](https://so.toutiao.com/search?keyword=2023乌镇峰会进入倒计时)
-1. [何立峰将访问美国](https://so.toutiao.com/search?keyword=何立峰将访问美国)
-1. [哈尔滨学生在暴风雪中艰难行走](https://so.toutiao.com/search?keyword=哈尔滨学生在暴风雪中艰难行走)
-1. [郑州鸵鸟出逃大结局来了](https://so.toutiao.com/search?keyword=郑州鸵鸟出逃大结局来了)
-1. [科学家发现地球正在漏气](https://so.toutiao.com/search?keyword=科学家发现地球正在漏气)
+1. [A股还会继续大涨吗](https://so.toutiao.com/search?keyword=A股还会继续大涨吗)
 1. [东北人展示家门口的雪有多厚](https://so.toutiao.com/search?keyword=东北人展示家门口的雪有多厚)
+1. [科学家发现地球正在漏气](https://so.toutiao.com/search?keyword=科学家发现地球正在漏气)
 1. [曝解放军与美军军舰同时现身太平岛](https://so.toutiao.com/search?keyword=曝解放军与美军军舰同时现身太平岛)
-1. [《无所畏惧》罗英子爸爸替女儿出头](https://so.toutiao.com/search?keyword=《无所畏惧》罗英子爸爸替女儿出头)
-1. [中日友好医院是日本人建的？假的](https://so.toutiao.com/search?keyword=中日友好医院是日本人建的？假的)
 1. [中央气象台：这次暴雪极端性相当强](https://so.toutiao.com/search?keyword=中央气象台：这次暴雪极端性相当强)
+1. [何立峰将访问美国](https://so.toutiao.com/search?keyword=何立峰将访问美国)
+1. [洪秀柱对台湾政治人物灵魂质问](https://so.toutiao.com/search?keyword=洪秀柱对台湾政治人物灵魂质问)
+1. [中日友好医院是日本人建的？假的](https://so.toutiao.com/search?keyword=中日友好医院是日本人建的？假的)
+1. [鼓励退休人员“返乡”有哪些影响](https://so.toutiao.com/search?keyword=鼓励退休人员“返乡”有哪些影响)
+1. [东北风雪有多猛？市民手牵手被吹翻](https://so.toutiao.com/search?keyword=东北风雪有多猛？市民手牵手被吹翻)
+1. [巴西女子拍下自己遭男友枪杀瞬间](https://so.toutiao.com/search?keyword=巴西女子拍下自己遭男友枪杀瞬间)
+1. [大学扩招到底有错没](https://so.toutiao.com/search?keyword=大学扩招到底有错没)
+1. [何立峰已任中央金融工作委员会书记](https://so.toutiao.com/search?keyword=何立峰已任中央金融工作委员会书记)
+1. [斗鱼证实CEO陈少杰失联](https://so.toutiao.com/search?keyword=斗鱼证实CEO陈少杰失联)
+1. [前河南省足协主席杨楠被立案调查](https://so.toutiao.com/search?keyword=前河南省足协主席杨楠被立案调查)
+1. [中纪委打下今年第40“虎”](https://so.toutiao.com/search?keyword=中纪委打下今年第40“虎”)
+1. [80岁老太遭邻居辱骂猝死](https://so.toutiao.com/search?keyword=80岁老太遭邻居辱骂猝死)
+1. [巴以冲突存在核选项？以总理澄清](https://so.toutiao.com/search?keyword=巴以冲突存在核选项？以总理澄清)
+1. [以军：加沙已被“一分为二”](https://so.toutiao.com/search?keyword=以军：加沙已被“一分为二”)
+1. [多个“喀秋莎”火箭炮向以色列开火](https://so.toutiao.com/search?keyword=多个“喀秋莎”火箭炮向以色列开火)
+1. [巴以冲突将消耗以510亿美元](https://so.toutiao.com/search?keyword=巴以冲突将消耗以510亿美元)
+1. [以色列计划永久占领加沙？中方回应](https://so.toutiao.com/search?keyword=以色列计划永久占领加沙？中方回应)
+1. [伊朗最高领袖会见哈马斯领导人](https://so.toutiao.com/search?keyword=伊朗最高领袖会见哈马斯领导人)
+1. [联合国18机构呼吁巴以人道主义停火](https://so.toutiao.com/search?keyword=联合国18机构呼吁巴以人道主义停火)
+1. [奥巴马谈巴以：没有谁的手是干净的](https://so.toutiao.com/search?keyword=奥巴马谈巴以：没有谁的手是干净的)
+1. [中方：将为恢复巴勒斯坦和平尽努力](https://so.toutiao.com/search?keyword=中方：将为恢复巴勒斯坦和平尽努力)
+1. [泽连斯基：以色列夺走西方注意力](https://so.toutiao.com/search?keyword=泽连斯基：以色列夺走西方注意力)
+1. [深铁董事长：减持万科是谣言](https://so.toutiao.com/search?keyword=深铁董事长：减持万科是谣言)
+1. [玉米地发现又胖又灵活的野生动物](https://so.toutiao.com/search?keyword=玉米地发现又胖又灵活的野生动物)
+1. [恒大地产再被强制执行4亿](https://so.toutiao.com/search?keyword=恒大地产再被强制执行4亿)
+1. [女子踢踹民警欲横穿马拉松赛道被抓](https://so.toutiao.com/search?keyword=女子踢踹民警欲横穿马拉松赛道被抓)
+1. [哈尔滨学生在暴风雪中艰难行走](https://so.toutiao.com/search?keyword=哈尔滨学生在暴风雪中艰难行走)
+1. [超级老声长沙站网红大叔踢馆](https://so.toutiao.com/search?keyword=超级老声长沙站网红大叔踢馆)
+1. [泽连斯基邀请特朗普访问乌克兰](https://so.toutiao.com/search?keyword=泽连斯基邀请特朗普访问乌克兰)
+1. [深圳地铁：将择机购买万科公开债](https://so.toutiao.com/search?keyword=深圳地铁：将择机购买万科公开债)
+1. [美驻华大使：美国不寻求同中国脱钩](https://so.toutiao.com/search?keyword=美驻华大使：美国不寻求同中国脱钩)
+1. [7旬老人花近5万按摩4根肋骨骨折](https://so.toutiao.com/search?keyword=7旬老人花近5万按摩4根肋骨骨折)
+1. [周一围朱丹回应婚姻争议](https://so.toutiao.com/search?keyword=周一围朱丹回应婚姻争议)
+1. [沪深两市全天成交额10642亿元](https://so.toutiao.com/search?keyword=沪深两市全天成交额10642亿元)
+1. [崔康熙：亚冠目标进入16强](https://so.toutiao.com/search?keyword=崔康熙：亚冠目标进入16强)
+1. [女子将3岁女儿推入池塘已被刑拘](https://so.toutiao.com/search?keyword=女子将3岁女儿推入池塘已被刑拘)
+1. [海底捞回应面试时问隐私问题](https://so.toutiao.com/search?keyword=海底捞回应面试时问隐私问题)
+1. [唐佳丽：质疑我的请认真看看我踢球](https://so.toutiao.com/search?keyword=唐佳丽：质疑我的请认真看看我踢球)
 1. [中国战地女记者陈慧慧已成功撤离](https://so.toutiao.com/search?keyword=中国战地女记者陈慧慧已成功撤离)
+1. [广东一民房失火多人遇难含一孕妇](https://so.toutiao.com/search?keyword=广东一民房失火多人遇难含一孕妇)
+1. [媒体：美方在进博会对华“示好”](https://so.toutiao.com/search?keyword=媒体：美方在进博会对华“示好”)
+1. [郑州鸵鸟出逃大结局来了](https://so.toutiao.com/search?keyword=郑州鸵鸟出逃大结局来了)
+1. [父子俩5.2元购入汽油6.7元出售](https://so.toutiao.com/search?keyword=父子俩5.2元购入汽油6.7元出售)
+1. [《无所畏惧》罗英子爸爸替女儿出头](https://so.toutiao.com/search?keyword=《无所畏惧》罗英子爸爸替女儿出头)
 1. [权志龙被曝吸毒后首现身](https://so.toutiao.com/search?keyword=权志龙被曝吸毒后首现身)
 1. [研究发现血型与疾病的发生有相关性](https://so.toutiao.com/search?keyword=研究发现血型与疾病的发生有相关性)
 1. [大搞权钱交易 “内鬼”被决定逮捕](https://so.toutiao.com/search?keyword=大搞权钱交易+“内鬼”被决定逮捕)
 1. [果敢同盟军的战斗力从何而来](https://so.toutiao.com/search?keyword=果敢同盟军的战斗力从何而来)
-1. [恒大地产再被强制执行4亿](https://so.toutiao.com/search?keyword=恒大地产再被强制执行4亿)
 1. [宅基地新政能释放多大红利](https://so.toutiao.com/search?keyword=宅基地新政能释放多大红利)
-1. [何立峰已任中央金融工作委员会书记](https://so.toutiao.com/search?keyword=何立峰已任中央金融工作委员会书记)
-1. [巴以冲突存在核选项？以总理澄清](https://so.toutiao.com/search?keyword=巴以冲突存在核选项？以总理澄清)
-1. [以军：加沙已被“一分为二”](https://so.toutiao.com/search?keyword=以军：加沙已被“一分为二”)
-1. [伊朗最高领袖会见哈马斯领导人](https://so.toutiao.com/search?keyword=伊朗最高领袖会见哈马斯领导人)
-1. [奥巴马谈巴以：没有谁的手是干净的](https://so.toutiao.com/search?keyword=奥巴马谈巴以：没有谁的手是干净的)
-1. [以色列计划永久占领加沙？中方回应](https://so.toutiao.com/search?keyword=以色列计划永久占领加沙？中方回应)
-1. [泽连斯基：以色列夺走西方注意力](https://so.toutiao.com/search?keyword=泽连斯基：以色列夺走西方注意力)
 1. [贵州检察机关依法对徐健生决定逮捕](https://so.toutiao.com/search?keyword=贵州检察机关依法对徐健生决定逮捕)
-1. [斗鱼证实CEO陈少杰失联](https://so.toutiao.com/search?keyword=斗鱼证实CEO陈少杰失联)
-1. [巴西女子拍下自己遭男友枪杀瞬间](https://so.toutiao.com/search?keyword=巴西女子拍下自己遭男友枪杀瞬间)
-1. [海底捞回应面试时问隐私问题](https://so.toutiao.com/search?keyword=海底捞回应面试时问隐私问题)
-1. [东北风雪有多猛？市民手牵手被吹翻](https://so.toutiao.com/search?keyword=东北风雪有多猛？市民手牵手被吹翻)
-1. [多个“喀秋莎”火箭炮向以色列开火](https://so.toutiao.com/search?keyword=多个“喀秋莎”火箭炮向以色列开火)
 1. [陈楚生被曝成《披荆斩棘》总冠军](https://so.toutiao.com/search?keyword=陈楚生被曝成《披荆斩棘》总冠军)
 1. [侯友宜批民进党把台湾变成兵凶战危](https://so.toutiao.com/search?keyword=侯友宜批民进党把台湾变成兵凶战危)
 1. [东北农民雪中抢收粮食](https://so.toutiao.com/search?keyword=东北农民雪中抢收粮食)
@@ -45,13 +71,10 @@
 1. [致传染病大爆发的“免疫落差”是啥](https://so.toutiao.com/search?keyword=致传染病大爆发的“免疫落差”是啥)
 1. [余承东称智界S7将超越特斯拉](https://so.toutiao.com/search?keyword=余承东称智界S7将超越特斯拉)
 1. [外交部：巴以冲突伤亡拷问人类良知](https://so.toutiao.com/search?keyword=外交部：巴以冲突伤亡拷问人类良知)
-1. [周一围朱丹回应婚姻争议](https://so.toutiao.com/search?keyword=周一围朱丹回应婚姻争议)
-1. [女子将3岁女儿推入池塘已被刑拘](https://so.toutiao.com/search?keyword=女子将3岁女儿推入池塘已被刑拘)
 1. [南京消防回应鼓楼医院天花板掉落](https://so.toutiao.com/search?keyword=南京消防回应鼓楼医院天花板掉落)
 1. [LNG被零封](https://so.toutiao.com/search?keyword=LNG被零封)
 1. [吴前、程帅澎等4人因冲突被罚5万](https://so.toutiao.com/search?keyword=吴前、程帅澎等4人因冲突被罚5万)
 1. [库里：今天的失利是一个很好的教训](https://so.toutiao.com/search?keyword=库里：今天的失利是一个很好的教训)
-1. [沪深两市全天成交额10642亿元](https://so.toutiao.com/search?keyword=沪深两市全天成交额10642亿元)
 1. [官方通报石家庄大桥拉索脱落原因](https://so.toutiao.com/search?keyword=官方通报石家庄大桥拉索脱落原因)
 1. [WTT太原站7日开赛 参赛名单公布](https://so.toutiao.com/search?keyword=WTT太原站7日开赛+参赛名单公布)
 1. [深圳国资委称万科具备足够的安全性](https://so.toutiao.com/search?keyword=深圳国资委称万科具备足够的安全性)
@@ -99,7 +122,6 @@
 1. [政策真金白银加力稳就业](https://so.toutiao.com/search?keyword=政策真金白银加力稳就业)
 1. [哈马斯发布迫击炮分队打击以军视频](https://so.toutiao.com/search?keyword=哈马斯发布迫击炮分队打击以军视频)
 1. [黑龙江火车脱轨事故调查结果公布](https://so.toutiao.com/search?keyword=黑龙江火车脱轨事故调查结果公布)
-1. [中纪委打下今年第40“虎”](https://so.toutiao.com/search?keyword=中纪委打下今年第40“虎”)
 1. [撒贝宁“新家”安装可折叠激光电视](https://so.toutiao.com/search?keyword=撒贝宁“新家”安装可折叠激光电视)
 1. [美俄亥俄级核潜艇抵达红海是何信号](https://so.toutiao.com/search?keyword=美俄亥俄级核潜艇抵达红海是何信号)
 1. [福建泉州一小区疑发生爆燃1死3伤](https://so.toutiao.com/search?keyword=福建泉州一小区疑发生爆燃1死3伤)
@@ -119,7 +141,6 @@
 1. [足球报：金元足球大多数都遭反噬](https://so.toutiao.com/search?keyword=足球报：金元足球大多数都遭反噬)
 1. [男子称因脸太方多次应聘被拒](https://so.toutiao.com/search?keyword=男子称因脸太方多次应聘被拒)
 1. [外媒：哈马斯已做好持久战准备](https://so.toutiao.com/search?keyword=外媒：哈马斯已做好持久战准备)
-1. [巴以冲突将消耗以510亿美元](https://so.toutiao.com/search?keyword=巴以冲突将消耗以510亿美元)
 1. [媒体：支持巴勒斯坦游行令西方紧张](https://so.toutiao.com/search?keyword=媒体：支持巴勒斯坦游行令西方紧张)
 1. [郭正亮：澳用三件事使中澳关系回暖](https://so.toutiao.com/search?keyword=郭正亮：澳用三件事使中澳关系回暖)
 1. [长春一医院上空现大量鸟群盘旋](https://so.toutiao.com/search?keyword=长春一医院上空现大量鸟群盘旋)
@@ -127,7 +148,6 @@
 1. [阿努诺比：文班的封盖太高了](https://so.toutiao.com/search?keyword=阿努诺比：文班的封盖太高了)
 1. [博主：全球经济衰退会维持几年](https://so.toutiao.com/search?keyword=博主：全球经济衰退会维持几年)
 1. [财政部部长晒国家“账本”](https://so.toutiao.com/search?keyword=财政部部长晒国家“账本”)
-1. [洪秀柱对台湾政治人物灵魂质问](https://so.toutiao.com/search?keyword=洪秀柱对台湾政治人物灵魂质问)
 1. [天津助学金当事人不认可调查结果](https://so.toutiao.com/search?keyword=天津助学金当事人不认可调查结果)
 1. [曝凯恩加盟拜仁后还没有找到房子](https://so.toutiao.com/search?keyword=曝凯恩加盟拜仁后还没有找到房子)
 1. [如何看待余承东深夜发文内涵何小鹏](https://so.toutiao.com/search?keyword=如何看待余承东深夜发文内涵何小鹏)
