--- a/archives/toutiao-search/2023-11-06.md
+++ b/archives/toutiao-search/2023-11-06.md
@@ -1,47 +1,69 @@
 # 2023-11-06
 
-共 401 条
+共 418 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 06 2023 22:01:47 GMT+0800 (China Standard Time) -->
-1. [黑龙江一体育馆坍塌 疑有孩子在馆内](https://so.toutiao.com/search?keyword=黑龙江一体育馆坍塌+疑有孩子在馆内)
-1. [科学家发现地球正在漏气](https://so.toutiao.com/search?keyword=科学家发现地球正在漏气)
-1. [金融制度型开放释放鲜明信号](https://so.toutiao.com/search?keyword=金融制度型开放释放鲜明信号)
-1. [东北人展示家门口的雪有多厚](https://so.toutiao.com/search?keyword=东北人展示家门口的雪有多厚)
-1. [研究发现血型与疾病的发生有相关性](https://so.toutiao.com/search?keyword=研究发现血型与疾病的发生有相关性)
-1. [巴西女子拍下自己遭男友枪杀瞬间](https://so.toutiao.com/search?keyword=巴西女子拍下自己遭男友枪杀瞬间)
-1. [东北风雪有多猛？市民手牵手被吹翻](https://so.toutiao.com/search?keyword=东北风雪有多猛？市民手牵手被吹翻)
+<!-- 最后更新时间 Mon Nov 06 2023 23:00:42 GMT+0800 (China Standard Time) -->
+1. [黑龙江体育馆坍塌3人被困](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌3人被困)
 1. [A股还会继续大涨吗](https://so.toutiao.com/search?keyword=A股还会继续大涨吗)
-1. [海底捞回应面试时问隐私问题](https://so.toutiao.com/search?keyword=海底捞回应面试时问隐私问题)
+1. [金融制度型开放释放鲜明信号](https://so.toutiao.com/search?keyword=金融制度型开放释放鲜明信号)
+1. [东北风雪有多猛？市民手牵手被吹翻](https://so.toutiao.com/search?keyword=东北风雪有多猛？市民手牵手被吹翻)
+1. [巴西女子拍下自己遭男友枪杀瞬间](https://so.toutiao.com/search?keyword=巴西女子拍下自己遭男友枪杀瞬间)
+1. [科学家发现地球正在漏气](https://so.toutiao.com/search?keyword=科学家发现地球正在漏气)
 1. [记者直击东北暴雪 雪太大没去成](https://so.toutiao.com/search?keyword=记者直击东北暴雪+雪太大没去成)
-1. [中日友好医院是日本人建的？假的](https://so.toutiao.com/search?keyword=中日友好医院是日本人建的？假的)
-1. [以色列总理就停火提条件](https://so.toutiao.com/search?keyword=以色列总理就停火提条件)
-1. [周一围朱丹回应婚姻争议](https://so.toutiao.com/search?keyword=周一围朱丹回应婚姻争议)
-1. [曝解放军与美军军舰同时现身太平岛](https://so.toutiao.com/search?keyword=曝解放军与美军军舰同时现身太平岛)
+1. [研究发现血型与疾病的发生有相关性](https://so.toutiao.com/search?keyword=研究发现血型与疾病的发生有相关性)
 1. [男子订婚现场下跪求婚被女友阻拦](https://so.toutiao.com/search?keyword=男子订婚现场下跪求婚被女友阻拦)
-1. [哈尔滨学生在暴风雪中艰难行走](https://so.toutiao.com/search?keyword=哈尔滨学生在暴风雪中艰难行走)
-1. [女子将3岁女儿推入池塘已被刑拘](https://so.toutiao.com/search?keyword=女子将3岁女儿推入池塘已被刑拘)
+1. [东北人展示家门口的雪有多厚](https://so.toutiao.com/search?keyword=东北人展示家门口的雪有多厚)
+1. [中日友好医院是日本人建的？假的](https://so.toutiao.com/search?keyword=中日友好医院是日本人建的？假的)
+1. [体育馆坍塌目击者：有两三人被抬出来](https://so.toutiao.com/search?keyword=体育馆坍塌目击者：有两三人被抬出来)
+1. [海底捞回应面试时问隐私问题](https://so.toutiao.com/search?keyword=海底捞回应面试时问隐私问题)
+1. [曝解放军与美军军舰同时现身太平岛](https://so.toutiao.com/search?keyword=曝解放军与美军军舰同时现身太平岛)
 1. [特朗普：为啥现在不谈乌克兰了](https://so.toutiao.com/search?keyword=特朗普：为啥现在不谈乌克兰了)
-1. [女生拍到男友登上房顶对列车告别](https://so.toutiao.com/search?keyword=女生拍到男友登上房顶对列车告别)
+1. [球馆坍塌家长哭喊“我儿子在里面”](https://so.toutiao.com/search?keyword=球馆坍塌家长哭喊“我儿子在里面”)
+1. [医生问啥时候发工资遭院长胞兄威胁](https://so.toutiao.com/search?keyword=医生问啥时候发工资遭院长胞兄威胁)
+1. [80岁老太遭邻居辱骂猝死](https://so.toutiao.com/search?keyword=80岁老太遭邻居辱骂猝死)
 1. [金莎带00后小男友上节目秀恩爱](https://so.toutiao.com/search?keyword=金莎带00后小男友上节目秀恩爱)
+1. [“始祖鸟平替”被年轻人疯抢](https://so.toutiao.com/search?keyword=“始祖鸟平替”被年轻人疯抢)
 1. [巴以冲突存在核选项？以总理澄清](https://so.toutiao.com/search?keyword=巴以冲突存在核选项？以总理澄清)
 1. [以军：加沙已被“一分为二”](https://so.toutiao.com/search?keyword=以军：加沙已被“一分为二”)
-1. [泽连斯基：以色列夺走西方注意力](https://so.toutiao.com/search?keyword=泽连斯基：以色列夺走西方注意力)
-1. [巴以冲突将消耗以510亿美元](https://so.toutiao.com/search?keyword=巴以冲突将消耗以510亿美元)
-1. [以色列计划永久占领加沙？中方回应](https://so.toutiao.com/search?keyword=以色列计划永久占领加沙？中方回应)
 1. [多个“喀秋莎”火箭炮向以色列开火](https://so.toutiao.com/search?keyword=多个“喀秋莎”火箭炮向以色列开火)
-1. [伊朗：美在巴以问题上没有保持中立](https://so.toutiao.com/search?keyword=伊朗：美在巴以问题上没有保持中立)
-1. [伊朗最高领袖会见哈马斯领导人](https://so.toutiao.com/search?keyword=伊朗最高领袖会见哈马斯领导人)
+1. [泽连斯基：以色列夺走西方注意力](https://so.toutiao.com/search?keyword=泽连斯基：以色列夺走西方注意力)
+1. [记者现场报道加沙战况：以军遭伏击](https://so.toutiao.com/search?keyword=记者现场报道加沙战况：以军遭伏击)
 1. [奥巴马谈巴以：没有谁的手是干净的](https://so.toutiao.com/search?keyword=奥巴马谈巴以：没有谁的手是干净的)
+1. [伊朗最高领袖会见哈马斯领导人](https://so.toutiao.com/search?keyword=伊朗最高领袖会见哈马斯领导人)
+1. [以色列计划永久占领加沙？中方回应](https://so.toutiao.com/search?keyword=以色列计划永久占领加沙？中方回应)
+1. [女生拍到男友登上房顶对列车告别](https://so.toutiao.com/search?keyword=女生拍到男友登上房顶对列车告别)
+1. [女子将3岁女儿推入池塘已被刑拘](https://so.toutiao.com/search?keyword=女子将3岁女儿推入池塘已被刑拘)
+1. [哈尔滨学生在暴风雪中艰难行走](https://so.toutiao.com/search?keyword=哈尔滨学生在暴风雪中艰难行走)
+1. [韩国为什么要禁止股票卖空](https://so.toutiao.com/search?keyword=韩国为什么要禁止股票卖空)
+1. [余承东称智界S7将超越特斯拉](https://so.toutiao.com/search?keyword=余承东称智界S7将超越特斯拉)
+1. [何立峰将访问美国](https://so.toutiao.com/search?keyword=何立峰将访问美国)
+1. [《以爱为营》秦时月帮郑书意出气](https://so.toutiao.com/search?keyword=《以爱为营》秦时月帮郑书意出气)
+1. [东北农民雪中抢收粮食](https://so.toutiao.com/search?keyword=东北农民雪中抢收粮食)
+1. [南京鼓楼医院塌方 系部分吊顶脱落](https://so.toutiao.com/search?keyword=南京鼓楼医院塌方+系部分吊顶脱落)
+1. [佳木斯大学回应学生疑遭霸凌跳江](https://so.toutiao.com/search?keyword=佳木斯大学回应学生疑遭霸凌跳江)
+1. [中纪委打下今年第40“虎”](https://so.toutiao.com/search?keyword=中纪委打下今年第40“虎”)
+1. [外交部部长助理农融访问缅甸](https://so.toutiao.com/search?keyword=外交部部长助理农融访问缅甸)
+1. [深圳国资委称万科具备足够的安全性](https://so.toutiao.com/search?keyword=深圳国资委称万科具备足够的安全性)
+1. [广东一民房失火多人遇难含一孕妇](https://so.toutiao.com/search?keyword=广东一民房失火多人遇难含一孕妇)
+1. [女子照顾嫂子生子每天下班帮带娃](https://so.toutiao.com/search?keyword=女子照顾嫂子生子每天下班帮带娃)
+1. [设计师做镂空羽绒服被吐槽冬冷夏热](https://so.toutiao.com/search?keyword=设计师做镂空羽绒服被吐槽冬冷夏热)
+1. [美国官员：中美贸易有助两国关系](https://so.toutiao.com/search?keyword=美国官员：中美贸易有助两国关系)
+1. [郑州鸵鸟出逃大结局来了](https://so.toutiao.com/search?keyword=郑州鸵鸟出逃大结局来了)
+1. [美国驻华大使进博会现场秀中文](https://so.toutiao.com/search?keyword=美国驻华大使进博会现场秀中文)
+1. [山东发布一批人事任免名单](https://so.toutiao.com/search?keyword=山东发布一批人事任免名单)
+1. [美媒：中国可再生能源加速取代煤炭](https://so.toutiao.com/search?keyword=美媒：中国可再生能源加速取代煤炭)
+1. [莫科不再担任四川男篮主帅](https://so.toutiao.com/search?keyword=莫科不再担任四川男篮主帅)
+1. [黑龙江一体育馆坍塌 疑有孩子在馆内](https://so.toutiao.com/search?keyword=黑龙江一体育馆坍塌+疑有孩子在馆内)
+1. [以色列总理就停火提条件](https://so.toutiao.com/search?keyword=以色列总理就停火提条件)
+1. [周一围朱丹回应婚姻争议](https://so.toutiao.com/search?keyword=周一围朱丹回应婚姻争议)
+1. [巴以冲突将消耗以510亿美元](https://so.toutiao.com/search?keyword=巴以冲突将消耗以510亿美元)
+1. [伊朗：美在巴以问题上没有保持中立](https://so.toutiao.com/search?keyword=伊朗：美在巴以问题上没有保持中立)
 1. [埃及要求从加沙撤至该国外国人离开](https://so.toutiao.com/search?keyword=埃及要求从加沙撤至该国外国人离开)
 1. [女子种红薯未收完遭村民哄抢](https://so.toutiao.com/search?keyword=女子种红薯未收完遭村民哄抢)
 1. [垃圾分类点现低俗标语：违者拉去陪客](https://so.toutiao.com/search?keyword=垃圾分类点现低俗标语：违者拉去陪客)
 1. [巴称以军夜间空袭已致超200人死亡](https://so.toutiao.com/search?keyword=巴称以军夜间空袭已致超200人死亡)
 1. [沪深两市全天成交额10642亿元](https://so.toutiao.com/search?keyword=沪深两市全天成交额10642亿元)
-1. [郑州鸵鸟出逃大结局来了](https://so.toutiao.com/search?keyword=郑州鸵鸟出逃大结局来了)
-1. [何立峰将访问美国](https://so.toutiao.com/search?keyword=何立峰将访问美国)
-1. [中纪委打下今年第40“虎”](https://so.toutiao.com/search?keyword=中纪委打下今年第40“虎”)
-1. [广东一民房失火多人遇难含一孕妇](https://so.toutiao.com/search?keyword=广东一民房失火多人遇难含一孕妇)
 1. [唐佳丽西女甲第91分钟绝杀](https://so.toutiao.com/search?keyword=唐佳丽西女甲第91分钟绝杀)
 1. [大学扩招到底有错没](https://so.toutiao.com/search?keyword=大学扩招到底有错没)
 1. [布林肯土耳其之行遭冷遇](https://so.toutiao.com/search?keyword=布林肯土耳其之行遭冷遇)
@@ -53,10 +75,8 @@
 1. [欧盟将增加对加沙的人道主义援助](https://so.toutiao.com/search?keyword=欧盟将增加对加沙的人道主义援助)
 1. [进博观察：“新”风拂过“四叶草”](https://so.toutiao.com/search?keyword=进博观察：“新”风拂过“四叶草”)
 1. [医院通报塌方事故 系部分吊顶脱落](https://so.toutiao.com/search?keyword=医院通报塌方事故+系部分吊顶脱落)
-1. [深圳国资委称万科具备足够的安全性](https://so.toutiao.com/search?keyword=深圳国资委称万科具备足够的安全性)
 1. [医院院长倒卖出生证明每张赚6万](https://so.toutiao.com/search?keyword=医院院长倒卖出生证明每张赚6万)
 1. [住持称与女主播发生关系后被敲诈](https://so.toutiao.com/search?keyword=住持称与女主播发生关系后被敲诈)
-1. [80岁老太遭邻居辱骂猝死](https://so.toutiao.com/search?keyword=80岁老太遭邻居辱骂猝死)
 1. [央行发行中国京剧艺术普通纪念币](https://so.toutiao.com/search?keyword=央行发行中国京剧艺术普通纪念币)
 1. [东北暴雪 黑瞎子岛旅游区临时关闭](https://so.toutiao.com/search?keyword=东北暴雪+黑瞎子岛旅游区临时关闭)
 1. [以色列部长极端言论遭地区国家谴责](https://so.toutiao.com/search?keyword=以色列部长极端言论遭地区国家谴责)
@@ -68,7 +88,6 @@
 1. [曝拉面店老板把炒面扣顾客身上](https://so.toutiao.com/search?keyword=曝拉面店老板把炒面扣顾客身上)
 1. [《以爱为营》秦时月想让时宴去道歉](https://so.toutiao.com/search?keyword=《以爱为营》秦时月想让时宴去道歉)
 1. [玉米地发现又胖又灵活的野生动物](https://so.toutiao.com/search?keyword=玉米地发现又胖又灵活的野生动物)
-1. [东北农民雪中抢收粮食](https://so.toutiao.com/search?keyword=东北农民雪中抢收粮食)
 1. [东北孩子的快乐是雪给的](https://so.toutiao.com/search?keyword=东北孩子的快乐是雪给的)
 1. [进博会国家展全面恢复线下展出](https://so.toutiao.com/search?keyword=进博会国家展全面恢复线下展出)
 1. [2023乌镇峰会进入倒计时](https://so.toutiao.com/search?keyword=2023乌镇峰会进入倒计时)
@@ -103,7 +122,6 @@
 1. [中国女足先后已有三人公开表不满](https://so.toutiao.com/search?keyword=中国女足先后已有三人公开表不满)
 1. [深圳国资委提出具体措施支持万科](https://so.toutiao.com/search?keyword=深圳国资委提出具体措施支持万科)
 1. [致传染病大爆发的“免疫落差”是啥](https://so.toutiao.com/search?keyword=致传染病大爆发的“免疫落差”是啥)
-1. [余承东称智界S7将超越特斯拉](https://so.toutiao.com/search?keyword=余承东称智界S7将超越特斯拉)
 1. [外交部：巴以冲突伤亡拷问人类良知](https://so.toutiao.com/search?keyword=外交部：巴以冲突伤亡拷问人类良知)
 1. [南京消防回应鼓楼医院天花板掉落](https://so.toutiao.com/search?keyword=南京消防回应鼓楼医院天花板掉落)
 1. [LNG被零封](https://so.toutiao.com/search?keyword=LNG被零封)
@@ -120,7 +138,6 @@
 1. [数万名抗议者聚集白宫呼吁停火](https://so.toutiao.com/search?keyword=数万名抗议者聚集白宫呼吁停火)
 1. [威海一轿车坠海3人遇难](https://so.toutiao.com/search?keyword=威海一轿车坠海3人遇难)
 1. [五大新车即将重磅上市](https://so.toutiao.com/search?keyword=五大新车即将重磅上市)
-1. [设计师做镂空羽绒服被吐槽冬冷夏热](https://so.toutiao.com/search?keyword=设计师做镂空羽绒服被吐槽冬冷夏热)
 1. [华为智选车首款轿车智界S7官图发布](https://so.toutiao.com/search?keyword=华为智选车首款轿车智界S7官图发布)
 1. [山东泰山：亚冠全力争取主动权](https://so.toutiao.com/search?keyword=山东泰山：亚冠全力争取主动权)
 1. [吉林省59个高速公路入口关闭](https://so.toutiao.com/search?keyword=吉林省59个高速公路入口关闭)
